Removing from list end instead of list head